Add GC_LOG_OPTS again